other/deny-force-delete/.kyverno-test/user_info.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: user-info
clusterRoles:
- developer
userInfo:
  username: someone@somecorp.com
