other/deny-force-delete/.kyverno-test/user_info_cluster-admin.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: user-info
clusterRoles:
- cluster-admin 
userInfo:
  username: someone@somecorp.com
